--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redis": "^4.0.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
