--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "CarService.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "external": "ts-node external.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "redis": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.8",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
