--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "CarService.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon index.ts",
     "external": "ts-node external.ts"
   },
@@ -19,8 +19,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0"
   }
 }
